rust/codec-pandoc/src/snapshots/pandoc_fragments@code-block.json.snap
---
source: rust/codec-pandoc/src/decode.rs
assertion_line: 738
expression: json
input_file: fixtures/fragments/pandoc/code-block.json
---
[
  {
    "type": "CodeBlock",
    "code": "Some plain text"
  },
  {
    "type": "CodeBlock",
    "code": "# Some Python code\n1 + 1",
    "programmingLanguage": "python"
  },
  {
    "type": "CodeBlock",
    "code": "An indented code block\nin unspecified language."
  }
]
