rust/codec-pandoc/src/snapshots/pandoc_fragments@code-fragment.json.snap
---
source: rust/codec-pandoc/src/decode.rs
assertion_line: 738
expression: json
input_file: fixtures/fragments/pandoc/code-fragment.json
---
[
  {
    "type": "Paragraph",
    "content": [
      "Some ",
      {
        "type": "CodeFragment",
        "code": "code"
      },
      " in a paragraph."
    ]
  }
]
