rust/codec-pandoc/src/snapshots/pandoc_fragments@heading.json.snap
---
source: rust/codec-pandoc/src/decode.rs
expression: json
input_file: fixtures/fragments/pandoc/heading.json

---
[
  {
    "type": "Heading",
    "content": [
      "Heading 1"
    ],
    "depth": 1,
    "id": "non-auto-id"
  },
  {
    "type": "Heading",
    "content": [
      "Heading 2"
    ],
    "depth": 2
  },
  {
    "type": "Heading",
    "content": [
      "Heading 3"
    ],
    "depth": 3
  },
  {
    "type": "Heading",
    "content": [
      "Heading 4"
    ],
    "depth": 4
  },
  {
    "type": "Heading",
    "content": [
      "Heading 5"
    ],
    "depth": 5
  },
  {
    "type": "Heading",
    "content": [
      "Heading 6"
    ],
    "depth": 6
  }
]
