rust/codec-pandoc/src/snapshots/pandoc_fragments@image.json.snap
---
source: rust/codec-pandoc/src/decode.rs
expression: json
input_file: fixtures/fragments/pandoc/image.json

---
[
  {
    "type": "Paragraph",
    "content": [
      "An image ",
      {
        "type": "ImageObject",
        "contentUrl": "image.png"
      },
      "."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "An image with a title ",
      {
        "type": "ImageObject",
        "contentUrl": "image.png",
        "title": "the title"
      },
      "."
    ]
  }
]
