rust/codec-pandoc/src/snapshots/pandoc_fragments@math-fragment.json.snap
---
source: rust/codec-pandoc/src/decode.rs
assertion_line: 738
expression: json
input_file: fixtures/fragments/pandoc/math-fragment.json
---
[
  {
    "type": "Paragraph",
    "content": [
      "Some math like ",
      {
        "type": "MathFragment",
        "code": "\\pi",
        "mathLanguage": "tex"
      },
      ", and ",
      {
        "type": "MathFragment",
        "code": "1+1",
        "mathLanguage": "tex"
      },
      "."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "But not $1 and $2."
    ]
  }
]
